test/parser/should_succeed/oper.souc
main() = do
	x <- 42
	print x
	x++ 
	print x
