test/parser/should_fail/statements4.souc
main() = do
    x <- 
    print x++
